--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 <header>
   <a href="index.html"><img src="rrlogo.png" alt="Red Rocks Housesitting"></a>
+  <div class="menu-toggle">☰</div>
   <nav>
     <a href="index.html">Home</a>
     <a href="about.html">About</a>
