--- a/about.html
+++ b/about.html
@@ -52,7 +52,7 @@
 </section>
 
 <footer>
-  redrockshousesitting@gmail.com | 
+  redrockshousesitting@gmail.com | +1 (720) 773-1324
 </footer>
 
 <script src="script.js"></script>
