--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
 
 <footer>
-  redrockshousesitting@gmail.com |
+  redrockshousesitting@gmail.com | +1 (720) 773-1324
 </footer>
 
 <script src="script.js"></script>
