--- a/request.html
+++ b/request.html
@@ -33,7 +33,7 @@
 </form>
 
 <footer>
-  redrockshousesitting@gmail.com | 
+  redrockshousesitting@gmail.com | +1 (720) 773-1324
 </footer>
 
 <script src="script.js"></script>
